# libai

./: CMakeLists.txt  README.md
models/: CMakeLists.txt
models/include/grid/models/: llama.h
models/include/libai/models/: llama.h
models/llama/: ggml.cc  ggml.h  karpathy.cc  karpathy.h  llama.cc  llama.h  llama_vocab.h
tensor/include/grid/tensor/: array.h  binary.h  comparison.h  concepts.h  device.h  function.h  generator.h  iterator.h  matmul.h  memory.h  mmap.h  precision.h  tensor.h  tensor_base.h  tensor_cpu.h  tensor_operation.h  tensor_parameters.h  tensor_view.h  transform.h  unary.h
tensor/include/grid/tensor/base/: array.h  binary.h  device.h  execution.h  generator.h  matmul.h  queue.h  rms_norm.h  rope.h  softmax.h  tensor.h  unary.h
tensor/include/grid/tensor/cpu/: array.h  binary.h  device.h  generator.h  matmul.h  queue.h  rms_norm.h  rope.h  softmax.h  tensor.h  unary.h
tensor/include/grid/tensor/cuda/: array.h  binary.h  device.h  matmul.h  rms_norm.h  softmax.h  tensor.h  unary.h
tensor/include/grid/tensor/metal/: array.h  binary.h  device.h  kernels.h  matmul.h  rms_norm.h  rope.h  softmax.h  tensor.h  unary.h  utils.h
tensor/include/libai/tensor/: allocator.h  array.h  binary.h  comparison.h  concepts.h  device.h  function.h  generator.h  iterator.h  matmul.h  memory.h  mmap.h  precision.h  tensor.h  tensor_cpu.h  tensor_cuda.h  tensor_metal.h  tensor_operation.h  tensor_parameters.h  tensor_view.h  transform.h  unary.h
tensor/include/libai/tensor/cpu/: array.h  binary.h  device.h  matmul.h  queue.h  rms_norm.h  softmax.h  tensor.h  unary.h
tensor/include/libai/tensor/cuda/: allocator.h  array.h  binary.h  device.h  matmul.h  rms_norm.h  softmax.h  tensor.h  unary.h
tensor/include/libai/tensor/metal/: allocator.h  array.h  binary.h  device.h  kernels.h  matmul.h  rms_norm.h  softmax.h  tensor.h  unary.h  utils.h
tensor/source/: CMakeLists.txt  mmap.cc  tensor.cc
tensor/source/base/: device.cc  queue.cc
tensor/source/cpu/: device.cc  queue.cc
tensor/source/cuda/: CMakeLists.txt  binary.cu  matmul.cu  reduce.h  rms_norm.cu  softmax.cu  unary.cu  utils.h  wrapper.cu
tensor/source/metal/: device.cc
tensor/source/metal/kernels/: CMakeLists.txt  reduce.h  rms_norm.metal  unary.metal
tensor/unittest/: CMakeLists.txt  addition.cc  array.cc  multiplication.cc  rms_norm.cc  rope.cc  silu.cc  softmax.cc  tensor.cc  tensor_base.cc  tensor_base.h  tensor_cpu.cc  tensor_cpu.h  tensor_cuda.h  tensor_metal.h  tensor_parameters.cc  unary.cc
tools/: CMakeLists.txt  llama.cc
util/: CMakeLists.txt
util/include/grid/util/: demangle.h  worker.h
util/include/libai/util/: demangle.h  worker.h
util/source/: CMakeLists.txt  worker.cc
util/unittest/: CMakeLists.txt  benchmark.cc  worker.cc
